# MAXi-XAI-lib

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/maxi/: index.html
docs/maxi/data/: data_types.html  index.html
docs/maxi/lib/: index.html
docs/maxi/lib/computation_components/: index.html
docs/maxi/lib/explanation/: explanation_generator.html  index.html
docs/maxi/lib/image_segmentation/: base_seg_handler.html  index.html  slic_handler.html  watershed_handler.html
docs/maxi/lib/inference/: index.html  inference_wrapper.html
docs/maxi/lib/loss/: base_explanation_model.html  cem_loss.html  index.html  lime_loss.html  tf_cem_loss.html  torch_cem_loss.html
docs/maxi/utils/: general.html  index.html  logger.html  loss_utils.html  optimizer_utils.html  quantizer_utils.html  segmentation_handler.html  superpixel_handler.html  transformations.html  x0_generators.html
docs/maxi/utils/result_processing/: index.html  res2contours.html  res2graydenoised.html  res2heatmap.html
docs/maxi/utils/tests/: index.html  utils.html  (+1 more)
docs/md/tutorials/: async_explanation_example.md  cem_pp_pn_smooth_example.md  explanation_model_example.md  gradient_example.md  inference_wrapper_example.md  l1_l2_kappa_influence.md  minimal_effort_mnist.md  optimizer_example.md  quantizer_example.md
experiments/mnist/: pyproject.toml  setup.py
experiments/mnist/models/: decoder_latent_dim_8.pt  encoder_latent_dim_8.pt
experiments/mnist/models/tf/: checkpoint  tf.data-00000-of-00001  tf.index
experiments/mnist/scripts/: npy_eval.py  tf_cem_mnist.py  tf_gather_test.py  torch_cem_cifar10.py  torch_cem_mnist.py
experiments/mnist/src/official_mnist_tf/: encoder_model.py  train_mnist_encoder.py  train_mnist_model.py
experiments/mnist/tests/: test_mnist.py
experiments/notebooks/: async_explanation_example.ipynb  intro_tut_segmentationhandler.ipynb  l1_l2_kappa_influence.ipynb  minimal_effort_mnist.ipynb  mnist_simdesim_test.ipynb
experiments/test_scripts/: tf_cem_imagenet.py  torch_cem_imagenet.py  torch_simdesim_mnist.py
src/maxi/: __init__.py
src/maxi/data/: __init__.py  data_types.py
src/maxi/lib/: __init__.py
src/maxi/utils/: __init__.py  general.py  logger.py  loss_utils.py  optimizer_utils.py  quantizer_utils.py  segmentation_handler.py  superpixel_handler.py  transformations.py  x0_generators.py
tests/computation_components/gradient/: test_urv_estimation.py
tests/computation_components/optimizer/: test_ada_exp_grad.py
tests/explanation/: test_async_wrapper.py  test_explanation_generator.py
tests/inference/: test_inference_wrapper.py
tests/inference/processor/: test_selective_region.py
tests/inference/quantizer/: test_confidence_method.py
tests/loss/: test_cem_loss.py
(+77 files in other folders)
