[tool.poetry]
name = "maxi"
version = "0.5.2"
description = "Model-Agnostic Explanation Library"
authors = ["Tuan Anh, Le <tuananh.le@dai-labor.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyyaml = "^6.0"
matplotlib = "^3.4.2"
numba = "^0.59.0"
opencv-python = "^4.5.4"
scikit-image = "^0.22.0"
torch = "^2.0.1"
numpy = "^1.19.0"
nptyping = "^2.0.0"
torchvision = "^0.17.0"
tensorflow = "^2.12.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pdoc3 = "^0.10.0"
jupyter = "^1.0.0"
ipython = "<8.22.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
