[tool.poetry]
name = "official_mnist_tf"
version = "0.1.0"
description = ""
authors = ["Le, Tuan Anh <tuananh.le@dai-labor.de>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
